src/test/resources/purescript_examples/passing/2378.purs.psi
Purescript File
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Console')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(ValueRef)
            PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ClassName)
          PsiElement(proper name)('Foo')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PsiElement(identifier)('a')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PsiErrorElement:Expecting FunKind
          PsiElement(proper name)('Symbol')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(TypeInstanceDeclaration)
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('fooX')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ClassName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('Foo')
            PsiElement(whitespace)(' ')
  PsiErrorElement:Unexpected string. Expecting Module
    PsiElement(string)('"x"')
    PsiElement(whitespace)('\n\n')
    PsiElement(identifier)('main')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('log')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"Done"')
    PsiElement(whitespace)('\n')
